--- a/web/default.tmpl
+++ b/web/default.tmpl
@@ -3,7 +3,7 @@ server {
         server_name _;
         ignore_invalid_headers off;
         underscores_in_headers on;
-        #root /home/vagrant/dylan/;
+        root /www/;
         location / {
                 proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
                 proxy_set_header Host $http_host;
