--- a/web/default.tmpl
+++ b/web/default.tmpl
@@ -21,8 +21,9 @@ proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
 upstream app {
-    server 172.17.0.2:8080 fail_timeout=0 weight=2;
-    server 172.17.0.3:8080 fail_timeout=0 weight=3;
+    #server 172.17.0.2:8080 fail_timeout=0 weight=2;
+    #server 172.17.0.3:8080 fail_timeout=0 weight=3;
+    server 172.17.0.9:8080 fail_timeout=0 weight=5;
     #server 172.17.0.9:8080;
     keepalive 2048;
 }
