--- a/fluentd/config/fluentd.tmpl
+++ b/fluentd/config/fluentd.tmpl
@@ -17,7 +17,45 @@
 #  tag reformed.${process}
 #  #domain ${message.scan(/^(.*?)\|.*/).first.first}
 #</match>
+#<match site.**>
+# type file
+# path /tmp/fluent_access
+#</match>
 <match site.**>
-  type file
-  path /tmp/fluent_access
+  type copy
+  #<store>
+  #  type file
+  #  path /tmp/fluentd/sinatra.log
+  #  buffer_path /tmp/fluentd/sinatra
+  #  time_slice_format %Y%m%d
+  #  time_format %Y%m%dT%H%M%S%z
+  #</store>
+
+  <store>
+    type forest
+    subtype s3
+    #remove_prefix site
+    <template>
+      aws_key_id  {{ .Env.AWS_KEY_ID }}
+      aws_sec_key {{ .Env.AWS_SEC_KEY }}
+      s3_bucket {{ .Env.AWS_S3_BUCKET }} 
+      s3_region ap-northeast-1
+      #s3_endpoint s3-ap-northeast-1.amazonaws.com
+      s3_object_key_format %{path}%{time_slice}_%{index}.%{file_extension}
+      path logs/${tag}/
+      time_slice_format %Y%m%d-%H
+      time_slice_wait 10m
+      #time_slice_format %Y/%m/%d/${tag}/ec2-%Y-%m-%d-%H
+      #buffer_path /var/log/td-agent/buffer/${tag}_buffer
+      #buffer_path /tmp/${tag}_buffer
+      buffer_type memory
+      retry_wait 30s
+      retry_limit 5
+      flush_interval 60s
+      flush_at_shutdown true
+   </template>
+  </store>
+  #<store>
+  #  type stdout
+  #</store>
 </match>
