--- a/fluentd/config/fluentd.tmpl
+++ b/fluentd/config/fluentd.tmpl
@@ -2,11 +2,17 @@
   type syslog
   port 5140
   bind 0.0.0.0
-  format /^(?<time>[^\]]*) (?<host>[^ ]*) (?<process>[^\[]*)\[(?<process_id>[0-9]+)\]: (?<message>.*)$/
+  format /^(?<time>[^\]]*) (?<host>[^ ]*) (?<process>[^\[]*)\[(?<process_id>[0-9]+)\]: (?<message>[^$]*)/
   #time_format %b %d %H:%M:%S
   time_format %FT%T%:z
   tag raw
 </source>
+
+<filter raw.**>
+  type dup
+  firstline /^(\d{4}-\d{2}-\d{2})/
+</filter>
+
 <match raw.**>
   type rewrite_tag_filter
   #capitalize_regex_backreference yes
