Fix:Fixing formatting

--- a/fluentd/config/fluentd.tmpl
+++ b/fluentd/config/fluentd.tmpl
@@ -10,7 +10,7 @@
 
 <filter raw.**>
   type dup
-  firstline /^(\d{4}-\d{2}-\d{2})/
+  firstline /(\d{4}-\d{2}-\d{2}|\d{4}\/\d{2}\/\d{2})/
 </filter>
 
 <match raw.**>
