Fix:Fixing Setting

--- a/fluentd/config/fluentd.tmpl
+++ b/fluentd/config/fluentd.tmpl
@@ -1,3 +1,11 @@
+<system>
+  # equal to -qq option
+  log_level error
+  # equal to --without-source option
+  #without_source
+  # ...
+</system>
+
 <source>
   type syslog
   port 5140
